tests/test_typing/bad/err1.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [
    Structure { -- i: 3 -- e: Int content x };
    Structure { -- i: 4.1 -- e: y };
    Structure { -- i: 5 -- e: Dat content |1970-01-01| }
  ]
  definition a equals number of (z ++ z) / 2
```

```catala-test-inline
$ catala Typecheck
[ERROR]
Error during typechecking, incompatible types:
┌─⯈ decimal
└─⯈ integer

Error coming from typechecking the following expression:
┌─⯈ err1.catala_en:7.23-7.26:
└─┐
7 │     Structure { -- i: 4.1 -- e: y };
  │                       ‾‾‾

Type decimal coming from expression:
┌─⯈ err1.catala_en:7.23-7.26:
└─┐
7 │     Structure { -- i: 4.1 -- e: y };
  │                       ‾‾‾

Type integer coming from expression:
┌─⯈ common.catala_en:8.18-8.25:
└─┐
8 │   data i content integer
  │                  ‾‾‾‾‾‾‾
#return code 123#
```
